removed duplication of module related jvm args