@@ -124,7 +124,8 @@ processTestResources {
 
 test {
     maxParallelForks = (System.env.CORDA_CORE_TESTING_FORKS == null) ? 1 :  "$System.env.CORDA_CORE_TESTING_FORKS".toInteger()
-    jvmArgs '--add-opens', 'java.base/java.net=ALL-UNNAMED', '--add-opens', 'java.base/java.nio=ALL-UNNAMED'
+    jvmArgs test_add_opens
+    jvmArgs test_add_exports
 }
 
 task testJar(type: Jar, dependsOn: testClasses) {
