@@ -60,7 +60,8 @@ task testJar(type: Jar) {
 }
 
 test {
-    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED', '--add-opens', 'java.base/java.time=ALL-UNNAMED'
+    jvmArgs test_add_opens
+    jvmArgs test_add_exports
 }
 
 artifacts {
